Added chromedriver, but not working

--- a/thikanaweb/pom.xml
+++ b/thikanaweb/pom.xml
@@ -13,6 +13,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>4.0.2.RELEASE</spring.version>
+        <chrome.driver.version>2.40.0</chrome.driver.version>
+        <firefox.driver.version>0.9.7376</firefox.driver.version>
 	</properties>
 
 	<dependencies>
@@ -63,6 +65,20 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- Chrome driver -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>${chrome.driver.version}</version>
+        </dependency>
+
+        <!-- Firefox driver -->
+        <dependency>
+            <groupId>org.seleniumhq.webdriver</groupId>
+            <artifactId>webdriver-firefox</artifactId>
+            <version>${firefox.driver.version}</version>
         </dependency>
 
 	</dependencies>
